--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.Language }}" dir="{{ .Language.LanguageDirection | default "auto" }}">
-
-<head>
+<html
+  lang="{{ .Site.Language }}"
+  dir="{{ .Language.LanguageDirection | default "auto" }}"
+>
+  <head>
     {{- partial "head.html" . }}
-</head>
+  </head>
 
-<body class="
+  <body
+    class="
 {{- if (or (ne .Kind `page` ) (eq .Layout `archives`) (eq .Layout `search`)) -}}
-{{- print "list" -}}
-{{- end -}}
+      {{- print "list" -}}
+    {{- end -}}
 {{- if eq $.Site.Params.defaultTheme `dark` -}}
-{{- print " dark" }}
-{{- end -}}
-" id="top">
+      {{- print " dark" }}
+    {{- end -}}
+"
+    id="top"
+  >
     {{- partialCached "header.html" . .Page -}}
     <main class="main">
-        {{- block "main" . }}{{ end }}
+      {{- block "main" . }}{{ end }}
     </main>
     {{ partialCached "footer.html" . .Layout .Kind (.Param "hideFooter") (.Param "ShowCodeCopyButtons") -}}
-</body>
-
+  </body>
 </html>
