--- a/layouts/partials/social_icons.html
+++ b/layouts/partials/social_icons.html
@@ -1,7 +1,12 @@
 <div class="social-icons">
-    {{- range . }}
-    <a href="{{ trim .url " " }}" target="_blank" rel="noopener noreferrer me" title="{{ .name | title }}">
-        {{ partial "svg.html" . }}
+  {{- range . }}
+    <a
+      href="{{ trim .url " " }}"
+      target="_blank"
+      rel="noopener noreferrer me"
+      title="{{ .name | title }}"
+    >
+      {{ partial "svg.html" . }}
     </a>
-    {{- end }}
+  {{- end }}
 </div>
